[gd_scene load_steps=10 format=3 uid="uid://bemfpf3tvuute"]

[ext_resource type="Script" path="res://Character/chara.gd" id="1_m1ybd"]
[ext_resource type="Script" path="res://Character/StateMachine/StateMachine.gd" id="6_qqmhe"]
[ext_resource type="Script" path="res://Character/StateMachine/States/Air.gd" id="7_t700i"]
[ext_resource type="Script" path="res://Character/StateMachine/States/Fall.gd" id="8_5ghpb"]
[ext_resource type="PackedScene" uid="uid://b6aowcqbcswti" path="res://Assets/Models/Characters/characters-rodolfo-classic_v1.glb" id="8_cycbb"]
[ext_resource type="Script" path="res://Character/StateMachine/States/Idle.gd" id="9_jjdcd"]
[ext_resource type="Script" path="res://Character/StateMachine/States/Jump.gd" id="10_w1kia"]
[ext_resource type="Script" path="res://Character/StateMachine/States/Run.gd" id="11_xr5cu"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_jdlak"]
height = 1.73991
radius = 0.373235

[node name="Rodolfo" type="CharacterBody3D" node_paths=PackedStringArray("stateMachine")]
script = ExtResource("1_m1ybd")
stateMachine = NodePath("StateMachine")
runMaxSpeed = 7.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0102, 0)
shape = SubResource("CylinderShape3D_jdlak")
metadata/_edit_lock_ = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("6_qqmhe")

[node name="AirState" type="Node" parent="StateMachine"]
script = ExtResource("7_t700i")

[node name="FallState" type="Node" parent="StateMachine"]
script = ExtResource("8_5ghpb")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("9_jjdcd")

[node name="JumpState" type="Node" parent="StateMachine"]
script = ExtResource("10_w1kia")

[node name="RunState" type="Node" parent="StateMachine"]
script = ExtResource("11_xr5cu")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.991879, 0.127186, 0, -0.127186, 0.991879, 0, 2.41396, 9.37838)

[node name="modelo" parent="." instance=ExtResource("8_cycbb")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
